fixed the model error styles similar to mobile app TODO: - mount faceboxes on proper positions. - fix height of program & window & images

--- a/src/js/index.scss
+++ b/src/js/index.scss
@@ -1,7 +1,12 @@
 h1 {
-  color: red;
+  color: #91BCB3;
 }
+div{
+  background-color: black;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+  background-color: black;
 }
